# cpp-static-analysis

./: CMakeLists.txt  Makefile  README.rst
src/: main.cpp
